# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Mar 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.7.0.0_alpha07.ebuild, +sun-jdk-1.7.0.0_alpha09.ebuild,
  +wget-log:
  Snapshot bump.

  11 Feb 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.7.0.0_alpha06.ebuild, +sun-jdk-1.7.0.0_alpha07.ebuild:
  Bump to new snapshot.

  23 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.1_alpha02.ebuild, +sun-jdk-1.6.0.1_alpha03.ebuild,
  +files/sun-jdk-1.6.0.1.env, -files/sun-jdk-1.6.env:
  New 1.6.0.1 snapshot. Moved to 1.6.0.1 SLOT to allow side-by-side
  installation with 1.6 from portage tree. They still haven't fixed javadoc :(

  19 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
  -sun-jdk-1.7.0.0_alpha05.ebuild, +sun-jdk-1.7.0.0_alpha06.ebuild:
  Bump to new snapshot.

  16 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  sun-jdk-1.6.0.1_alpha02.ebuild:
  Fix unpack

  16 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.1_alpha01.ebuild, +sun-jdk-1.6.0.1_alpha02.ebuild:
  Bump to new snapshot.

  12 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.7.0.0_alpha04.ebuild, +sun-jdk-1.7.0.0_alpha05.ebuild:
  New 1.7 snapshot.

  03 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  +sun-jdk-1.6.0.1_alpha01.ebuild, +files/sun-jdk-1.6.env,
  -sun-jdk-1.7.0.0_alpha03.ebuild, +sun-jdk-1.7.0.0_alpha04.ebuild:
  New 1.7 snapshot and also first snapshot of 1.6 update 1 (6u1).

  13 Dec 2006; Vlastimil Babka <caster@gentoo.org> -sun-jdk-1.6.0.ebuild,
  -files/sun-jdk-1.6.env:
  1.6 version moved to portage tree

  13 Dec 2006; Vlastimil Babka <caster@gentoo.org> sun-jdk-1.6.0.ebuild:
  Fixed jce/doc dependencies and QA_TEXTRELS_x86.

  04 Dec 2006; Vlastimil Babka <caster@gentoo.org> -sun-jdk-1.5.0.10.ebuild,
  -files/sun-jdk-1.5.env, -sun-jdk-1.7.0.0_alpha02.ebuild,
  +sun-jdk-1.7.0.0_alpha03.ebuild: