@@ -1,30 +1,30 @@
-AUX sun-jdk-1.6.0.1.env 925 RMD160 cac1306ba6dd05dcf74fb2e536bf40bd3f03bee1 SHA1 02587c415e0dffefdf8900fad5884d2bd604056c SHA256 8fd2d12405a41b923b3c64d56b9e42a89d2479323fd78703f2b065fb0ee7ec2b
-MD5 f356c5b7e3ccb4243bac775c0286c4fb files/sun-jdk-1.6.0.1.env 925
-RMD160 cac1306ba6dd05dcf74fb2e536bf40bd3f03bee1 files/sun-jdk-1.6.0.1.env 925
-SHA256 8fd2d12405a41b923b3c64d56b9e42a89d2479323fd78703f2b065fb0ee7ec2b files/sun-jdk-1.6.0.1.env 925
+AUX sun-jdk-1.6.0.02.env 925 RMD160 cac1306ba6dd05dcf74fb2e536bf40bd3f03bee1 SHA1 02587c415e0dffefdf8900fad5884d2bd604056c SHA256 8fd2d12405a41b923b3c64d56b9e42a89d2479323fd78703f2b065fb0ee7ec2b
+MD5 f356c5b7e3ccb4243bac775c0286c4fb files/sun-jdk-1.6.0.02.env 925
+RMD160 cac1306ba6dd05dcf74fb2e536bf40bd3f03bee1 files/sun-jdk-1.6.0.02.env 925
+SHA256 8fd2d12405a41b923b3c64d56b9e42a89d2479323fd78703f2b065fb0ee7ec2b files/sun-jdk-1.6.0.02.env 925
 AUX sun-jdk-1.7.env 925 RMD160 f20078640a13176763381811e2050d0b9cd0ca1e SHA1 e2ef76e945eb3b4a34c4edfcf6376c58a54697b7 SHA256 95689b9bc21a9d571f556da0c6377c326bd2d24bc71f0b32f9bdc836c90cf581
 MD5 095bd3019f41594de107fab06efe56aa files/sun-jdk-1.7.env 925
 RMD160 f20078640a13176763381811e2050d0b9cd0ca1e files/sun-jdk-1.7.env 925
 SHA256 95689b9bc21a9d571f556da0c6377c326bd2d24bc71f0b32f9bdc836c90cf581 files/sun-jdk-1.7.env 925
-DIST jdk-6u1-ea-bin-b03-linux-amd64-19_jan_2007.bin 56252255 RMD160 1e81a60422ade89505c6de4ae68ccb39012babbf SHA1 dd2ca5c0a654e9bc89a191d26105892850605dc3 SHA256 3852574de07f6a9a7d84f745a7431b37b621531a14ea49283b3a1817c6627eb4
-DIST jdk-6u1-ea-bin-b03-linux-i586-19_jan_2007.bin 62678853 RMD160 afe15b7b0ade519a5dc8f6300f57793d08540a05 SHA1 ca3c9d6ce549060cc3fa702437b4bbbc850d9b4b SHA256 928a4b9d0448d70437487b416c4c04ef3c28de9e86075755c987bfc6d7e2b785
-DIST jdk-7-ea-bin-b09-linux-amd64-01_mar_2007.bin 56390343 RMD160 fd7355b3e6c7b84c7f409a1cdcb738fcc15f02e2 SHA1 057c502e1f14faf1fc9448597b66fd03fbd5372d SHA256 2726e5349c9eab9ec2f5736a62f4e32a119b4f6c844d2ceba837c93833b2999d
-DIST jdk-7-ea-bin-b09-linux-i586-01_mar_2007.bin 62739111 RMD160 91ff61e882e9fc7b8476ca3b9646b452177ecdfb SHA1 ce291884945d9e4226b24d1bdc05c4392c93421d SHA256 7eab9baff476da98a18061eafc5639c11ab5845f799a38e995a17eee1b921b2e
-EBUILD sun-jdk-1.6.0.1_alpha03.ebuild 5302 RMD160 1b635f2e24f91ca8f6ebc8c2dd8fc8d6acf9466d SHA1 419d7be293852caeaa6e17bc8d430eba276ee2a8 SHA256 166882801e6fb4f5fb3fb1ca06c485586d11a7109073ff1115d206964fc87913
-MD5 65b8e7069a482997300e102edd0e2ead sun-jdk-1.6.0.1_alpha03.ebuild 5302
-RMD160 1b635f2e24f91ca8f6ebc8c2dd8fc8d6acf9466d sun-jdk-1.6.0.1_alpha03.ebuild 5302
-SHA256 166882801e6fb4f5fb3fb1ca06c485586d11a7109073ff1115d206964fc87913 sun-jdk-1.6.0.1_alpha03.ebuild 5302
-EBUILD sun-jdk-1.7.0.0_alpha09.ebuild 5495 RMD160 c44c51d351a3f4852f2bc4ca918a1f4970294ea9 SHA1 cbc1abd68bce66d0f56e600f9cc323a9187b4550 SHA256 4dee023af0565a51210a163257978a600dee53c0d45b27ce3538bb0d06f862bb
-MD5 28210f83a3d0b33d86405aa5e858effa sun-jdk-1.7.0.0_alpha09.ebuild 5495
-RMD160 c44c51d351a3f4852f2bc4ca918a1f4970294ea9 sun-jdk-1.7.0.0_alpha09.ebuild 5495
-SHA256 4dee023af0565a51210a163257978a600dee53c0d45b27ce3538bb0d06f862bb sun-jdk-1.7.0.0_alpha09.ebuild 5495
-MISC ChangeLog 3131 RMD160 02284c4cfa9e486617f2a0f6e1319c2cc1e08e7e SHA1 01b0ac4bb358f57ab99368fc3e8935a4969a1648 SHA256 9db01052bf6a48ed696633cb362434b508e97d30700608c74c060fdb8b70f3ba
-MD5 95f41e7815b8e2d20f92e455d6b7077e ChangeLog 3131
-RMD160 02284c4cfa9e486617f2a0f6e1319c2cc1e08e7e ChangeLog 3131
-SHA256 9db01052bf6a48ed696633cb362434b508e97d30700608c74c060fdb8b70f3ba ChangeLog 3131
-MD5 ef5bfd5617c4e50583ba2db6c5162067 files/digest-sun-jdk-1.6.0.1_alpha03 647
-RMD160 751397781f66e2a3e8876c3153151725beb53130 files/digest-sun-jdk-1.6.0.1_alpha03 647
-SHA256 7d6a06b655f47dee7eeee4fc6e9b817c6aeb606f8a428b7a5d1022819f8d5100 files/digest-sun-jdk-1.6.0.1_alpha03 647
-MD5 2d788947e677a4c98234e025a8f1faa6 files/digest-sun-jdk-1.7.0.0_alpha09 635
-RMD160 137753fa1793299489bd587af56c6cb9cb819be6 files/digest-sun-jdk-1.7.0.0_alpha09 635
-SHA256 aa7d439c0108ebc43a753a191446bacf232ebe1cc0ab3ca7e61e93252c9559dd files/digest-sun-jdk-1.7.0.0_alpha09 635
+DIST jdk-6u2-ea-bin-b01-linux-amd64-29_mar_2007.bin 56360624 RMD160 139a23c28bd4c380a9a1fdbcbe9b7efaa126cd75 SHA1 b85e6894c389e1717fb06b3cca969a067c003010 SHA256 ca25765e9adaf3463805104fedd45edac4582da9f45609e2d0881f4782837d7e
+DIST jdk-6u2-ea-bin-b01-linux-i586-29_mar_2007.bin 62778135 RMD160 d131044cdfbfebccc53cf6333d578294dcf78ed3 SHA1 0ef521bd5c5b9e6cca0d2a7e766480ab30c578d8 SHA256 c6e3c28648b19311e13fdea6a29ddcf3ac3d9e9a723bee9aa11d0da3946928fb
+DIST jdk-7-ea-bin-b10-linux-amd64-20_mar_2007.bin 56240788 RMD160 ee602b876034c6ec61143607c3ec2323b52b38a9 SHA1 863b7868638d09cd2a443c0ac55fc272e706eab9 SHA256 52144b6227753c90327da4860efe8d93b149a5d2b25a97a4cb27d56e79d3fcbd
+DIST jdk-7-ea-bin-b10-linux-i586-20_mar_2007.bin 62600494 RMD160 1f386a6cf5a9fb0f6d2fefb85852d0678704da58 SHA1 83a1104da9a64778ff6c1cffc65458dec7b11ace SHA256 118f3d2124ecc3779d718bf7e6da8916bda9c07cacdd0654641fca7485b1498a
+EBUILD sun-jdk-1.6.0.02_alpha01.ebuild 5259 RMD160 e987d196db3dcebdd9632b23bc093f65ad7f3645 SHA1 1a109a54a3044e11e9e18a4b5cbcc7873f195fea SHA256 2e070ba90f02d0575c0af4b99e54d462d8e52a73407aaf0cdf92a710d47a30fc
+MD5 96cd6760162aa6925650f30221689206 sun-jdk-1.6.0.02_alpha01.ebuild 5259
+RMD160 e987d196db3dcebdd9632b23bc093f65ad7f3645 sun-jdk-1.6.0.02_alpha01.ebuild 5259
+SHA256 2e070ba90f02d0575c0af4b99e54d462d8e52a73407aaf0cdf92a710d47a30fc sun-jdk-1.6.0.02_alpha01.ebuild 5259
+EBUILD sun-jdk-1.7.0.0_alpha10.ebuild 5452 RMD160 7b141d3166caba1c2b0bf613cab0fdced867f0ad SHA1 bfb03b2dcdf8e22b8576bd19f6b15bfee83c27b1 SHA256 45b5158362a45e46fb91c987b19b0b7897d24cff43a303b84044a7d6c48ba4bc
+MD5 193fa0c73416fc13c9826f2af5ad8b97 sun-jdk-1.7.0.0_alpha10.ebuild 5452
+RMD160 7b141d3166caba1c2b0bf613cab0fdced867f0ad sun-jdk-1.7.0.0_alpha10.ebuild 5452
+SHA256 45b5158362a45e46fb91c987b19b0b7897d24cff43a303b84044a7d6c48ba4bc sun-jdk-1.7.0.0_alpha10.ebuild 5452
+MISC ChangeLog 3435 RMD160 db2d209b1a42d472ede51b7a9b457f08727abaf8 SHA1 0d4f38479fa8847a46bc770d44c78677acbc479e SHA256 fb2c4579c1ee6e60351d1ab8cadd8344bf1f80ccf33b5053d700fe6271130922
+MD5 76ad1caaea97611fa5ea42938e401846 ChangeLog 3435
+RMD160 db2d209b1a42d472ede51b7a9b457f08727abaf8 ChangeLog 3435
+SHA256 fb2c4579c1ee6e60351d1ab8cadd8344bf1f80ccf33b5053d700fe6271130922 ChangeLog 3435
+MD5 90f20b7e2fea2e77595476a34c51503e files/digest-sun-jdk-1.6.0.02_alpha01 647
+RMD160 fb81ab6a8a65ba3e84baa0f56407a1793addf4a1 files/digest-sun-jdk-1.6.0.02_alpha01 647
+SHA256 e02e752116c7a4b7b8fa32d77b0935d4584e9f88e21f0d3cfc3b6904810294d5 files/digest-sun-jdk-1.6.0.02_alpha01 647
+MD5 66e43ef016fe21e1883a9bd6cef41f0e files/digest-sun-jdk-1.7.0.0_alpha10 635
+RMD160 337ce424fb278984ea496c05f1967130e54b7bb2 files/digest-sun-jdk-1.7.0.0_alpha10 635
+SHA256 790512e9d8910c53726df30826cb0e9dffb37c529bec5b4811a8da39555f42a8 files/digest-sun-jdk-1.7.0.0_alpha10 635
