@@ -1,0 +1,6 @@
+MD5 042e49b695bf274c13ce55ec4c2238c7 jdk-6u2-ea-bin-b01-linux-amd64-29_mar_2007.bin 56360624
+RMD160 139a23c28bd4c380a9a1fdbcbe9b7efaa126cd75 jdk-6u2-ea-bin-b01-linux-amd64-29_mar_2007.bin 56360624
+SHA256 ca25765e9adaf3463805104fedd45edac4582da9f45609e2d0881f4782837d7e jdk-6u2-ea-bin-b01-linux-amd64-29_mar_2007.bin 56360624
+MD5 b8b3285b691a8e36b5f4d33aa7ca7906 jdk-6u2-ea-bin-b01-linux-i586-29_mar_2007.bin 62778135
+RMD160 d131044cdfbfebccc53cf6333d578294dcf78ed3 jdk-6u2-ea-bin-b01-linux-i586-29_mar_2007.bin 62778135
+SHA256 c6e3c28648b19311e13fdea6a29ddcf3ac3d9e9a723bee9aa11d0da3946928fb jdk-6u2-ea-bin-b01-linux-i586-29_mar_2007.bin 62778135
