@@ -1,6 +1,0 @@
-MD5 dfb0aa243f601f3a3858527bf77c16aa jdk-6u1-ea-bin-b03-linux-amd64-19_jan_2007.bin 56252255
-RMD160 1e81a60422ade89505c6de4ae68ccb39012babbf jdk-6u1-ea-bin-b03-linux-amd64-19_jan_2007.bin 56252255
-SHA256 3852574de07f6a9a7d84f745a7431b37b621531a14ea49283b3a1817c6627eb4 jdk-6u1-ea-bin-b03-linux-amd64-19_jan_2007.bin 56252255
-MD5 ed13a2756243293e8b5056b42d340d59 jdk-6u1-ea-bin-b03-linux-i586-19_jan_2007.bin 62678853
-RMD160 afe15b7b0ade519a5dc8f6300f57793d08540a05 jdk-6u1-ea-bin-b03-linux-i586-19_jan_2007.bin 62678853
-SHA256 928a4b9d0448d70437487b416c4c04ef3c28de9e86075755c987bfc6d7e2b785 jdk-6u1-ea-bin-b03-linux-i586-19_jan_2007.bin 62678853
