@@ -1,6 +1,0 @@
-MD5 d1009631c64dbafb551010a109b85e46 jdk-7-ea-bin-b09-linux-amd64-01_mar_2007.bin 56390343
-RMD160 fd7355b3e6c7b84c7f409a1cdcb738fcc15f02e2 jdk-7-ea-bin-b09-linux-amd64-01_mar_2007.bin 56390343
-SHA256 2726e5349c9eab9ec2f5736a62f4e32a119b4f6c844d2ceba837c93833b2999d jdk-7-ea-bin-b09-linux-amd64-01_mar_2007.bin 56390343
-MD5 40e3b5530d8913e257ffea4e2765c9d6 jdk-7-ea-bin-b09-linux-i586-01_mar_2007.bin 62739111
-RMD160 91ff61e882e9fc7b8476ca3b9646b452177ecdfb jdk-7-ea-bin-b09-linux-i586-01_mar_2007.bin 62739111
-SHA256 7eab9baff476da98a18061eafc5639c11ab5845f799a38e995a17eee1b921b2e jdk-7-ea-bin-b09-linux-i586-01_mar_2007.bin 62739111
