@@ -1,0 +1,6 @@
+MD5 674012c566e5e1fa3b2ee9af4cde097d jdk-7-ea-bin-b10-linux-amd64-20_mar_2007.bin 56240788
+RMD160 ee602b876034c6ec61143607c3ec2323b52b38a9 jdk-7-ea-bin-b10-linux-amd64-20_mar_2007.bin 56240788
+SHA256 52144b6227753c90327da4860efe8d93b149a5d2b25a97a4cb27d56e79d3fcbd jdk-7-ea-bin-b10-linux-amd64-20_mar_2007.bin 56240788
+MD5 24b71196b0ae0e86e981775a43cfa31c jdk-7-ea-bin-b10-linux-i586-20_mar_2007.bin 62600494
+RMD160 1f386a6cf5a9fb0f6d2fefb85852d0678704da58 jdk-7-ea-bin-b10-linux-i586-20_mar_2007.bin 62600494
+SHA256 118f3d2124ecc3779d718bf7e6da8916bda9c07cacdd0654641fca7485b1498a jdk-7-ea-bin-b10-linux-i586-20_mar_2007.bin 62600494
