@@ -5,14 +5,14 @@
 inherit java-vm-2 eutils
 
 MY_PV=${PV/_alpha*/}
-MY_PVL=${MY_PV%.*}_0${MY_PV##*.}
+MY_PVL=${MY_PV%.*}_${MY_PV##*.}
 MY_PVA=${MY_PV//./_}
 BETA=${PV#*_alpha}
-DATE="19_jan_2007"
+DATE="29_mar_2007"
 
-BASE_URL="http://www.java.net/download/jdk6/6u1/promoted/b${BETA}/binaries/"
-x86file="jdk-6u1-ea-bin-b${BETA}-linux-i586-${DATE}.bin"
-amd64file="jdk-6u1-ea-bin-b${BETA}-linux-amd64-${DATE}.bin"
+BASE_URL="http://www.java.net/download/jdk6/6u2/promoted/b${BETA}/binaries/"
+x86file="jdk-6u2-ea-bin-b${BETA}-linux-i586-${DATE}.bin"
+amd64file="jdk-6u2-ea-bin-b${BETA}-linux-amd64-${DATE}.bin"
 
 if use x86; then
 	At=${x86file}
@@ -24,16 +24,14 @@ S="${WORKDIR}/jdk${MY_PVL}"
 DESCRIPTION="Sun's Java Development Kit"
 HOMEPAGE="https://jdk6.dev.java.net/"
 SRC_URI="x86? ( ${BASE_URL}/$x86file ) amd64? ( ${BASE_URL}/$amd64file )"
-SLOT="1.6.0.1"
+SLOT="1.6.0.02"
 LICENSE="sun-prerelease-jdk6"
 KEYWORDS="~amd64 ~x86"
 RESTRICT="nostrip fetch"
 # TODO: needs to remove libs that don't have satisfied deps
 IUSE="X alsa doc nsplugin examples"
 
-DEPEND="
-	sys-apps/sed
-	doc? ( =dev-java/java-sdk-docs-1.5.0* )"
+DEPEND="sys-apps/sed"
 
 RDEPEND="
 	=virtual/libstdc++-3.3
@@ -45,7 +43,7 @@ RDEPEND="
 		x11-libs/libXtst
 	)
 	alsa? ( media-libs/alsa-lib )
-	doc? ( =dev-java/java-sdk-docs-1.5.0* )"
+	doc? ( =dev-java/java-sdk-docs-1.6.0* )"
 
 JAVA_PROVIDE="jdbc-stdext jdbc-rowset"
 
