@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Mar 2007; Vlastimil Babka <caster@gentoo.org>
+  -sun-jdk-1.6.0.1_alpha03.ebuild, -files/sun-jdk-1.6.0.1.env,
+  +sun-jdk-1.6.0.02_alpha01.ebuild, +files/sun-jdk-1.6.0.02.env,
+  -sun-jdk-1.7.0.0_alpha09.ebuild, +sun-jdk-1.7.0.0_alpha10.ebuild:
+  Bump 1.6 to first 6u2 snapshot, and new 1.7 snapshot.
+
   02 Mar 2007; Vlastimil Babka <caster@gentoo.org>
   -sun-jdk-1.7.0.0_alpha07.ebuild, +sun-jdk-1.7.0.0_alpha09.ebuild,
   +wget-log:
